<resources>
    <string name="app_name">M4D</string>
    <string name="navigation_drawer_open">Open navigation menu</string>
    <string name="navigation_drawer_close">Close navigation menu</string>
    <string name="nav_header_title">M4D Pro</string>
    <string name="subtitulo">Monitor For Database Pro</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>
    <string name="update">Update data</string>
    <string name="upload">Upload file</string>
    <string name="imformation">Information</string>
    <string name="dashboard">Dashboard</string>
    <string name="bemvindo">Welcome to M4D Pro. Select a file to start.</string>

    <string name="em_uso">In use</string>
    <string name="disponivel">Available</string>
    <string name="data_atualizacao_app">Last Update</string>
    <string name="intervalo_atualizacao">Auto refresh interval (seconds)</string>

    <string name="tela_configuracoes">Settings</string>
    <string name="path">Automatic update directory</string>
    <string name="botao_salvar">Save</string>
    <string name="reiniciar_app">Restart the application for the updates to take effect.</string>
    <string name="informe_diretorio">Please enter a directory.</string>
    <string name="invalido">Invalid file or directory!</string>

    <string name="tela_sobre">About</string>
    <string name="logo_descricao">Application logo</string>
    <string name="versão">Version %1$s Pro</string>
    <string name="site">www.monitor4database.com</string>
    <string name="politicas_privacidade">Privacy Policies</string>

    <string name="adview_principal">ca-app-pub-1515356271188004/8974667852</string>
    <string name="adview_dashboard">ca-app-pub-1515356271188004/5606268489</string>
</resources>
