<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20sp"
    android:layout_marginTop="10sp"
    android:layout_marginEnd="20sp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/path"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtIntervaloAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/intervalo_atualizacao"
            android:inputType="number"
            android:scrollbars="vertical"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSalvvar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/botao_salvar" />

</LinearLayout>