<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <LinearLayout
        android:id="@+id/llPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.gms.ads.AdView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1sp"
            android:id="@+id/adViewDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:adSize="BANNER"
            app:adUnitId="@string/adview_dashboard"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/txt01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal" />

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/chart1"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="#ED5565" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/em_uso" />

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:background="#48CFAD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/disponivel" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/txt02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal" />

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/chart2"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="#ED5565" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/em_uso" />

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:background="#48CFAD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/disponivel" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/txt03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal" />

            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/chart3"
                android:layout_width="300sp"
                android:layout_height="300sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="#ED5565" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/em_uso" />

                <View
                    android:layout_width="15sp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:background="#48CFAD" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10sp"
                    android:text="@string/disponivel" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>